[gd_scene load_steps=31 format=2]

[ext_resource path="res://MapTilesets/Dirty Depths/Special/BlockerBoss.gd" type="Script" id=1]
[ext_resource path="res://Assets/Tilemap/tilemap_packed.png" type="Texture" id=2]
[ext_resource path="res://Blocker.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/UI/BluuNext-Bold.otf" type="DynamicFontData" id=4]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 21, 0, 21, 21, 0, 21 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 21, 0, 21, 21, 0, 21 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 21, 0, 21, 21, 0, 21 )

[sub_resource type="TileSet" id=4]
0/name = "tilemap_packed.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 147, 546, 21, 42 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 32309264, Vector2( 0, 1 ), 32309266 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 21, 21 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 4, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 21, 0, 21, 21, 0, 21 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 21, 0, 21, 21, 0, 21 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 21, 0, 21, 21, 0, 21 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 21, 0, 21, 21, 0, 21 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 21, 0, 21, 21, 0, 21 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 21, 0, 21, 21, 0, 21 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 21, 0, 21, 0, 21, 21, 0, 21 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 0, 0, 0, 21, 21, 0, 21 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 0, 0, 21, 0, 21, 21, 0, 21 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 0, 0, 21, 0, 21, 21, 0, 21 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 21, 21, 16.4009, 21, 7.56332, 18.1407, 2.44683, 13.4894, 0, 9.53571, 0, 0, 21, 0 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 0, 0, 21, 0, 21, 9.93196, 18.2614, 13.4205, 12.9124, 18.0718, 4.7725, 21, 0, 21 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 0, 0, 21, 0, 21, 8.76912, 15.841, 10.3971, 10.957, 13.8856, 7.93365, 21, 0, 21 )

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( 0, 0, 21, 0, 21, 21, 13.1879, 21, 10.8622, 15.0485, 5.97831, 10.3971, 0, 8.07141 )

[sub_resource type="TileSet" id=19]
0/name = "tilemap_packed.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 21, 0, 147, 42 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 21, 21 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 5 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 6, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 6, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 18 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=20]
points = PoolVector2Array( 0, 0, 21, 0, 21, 10.9311, 0, 10.9311 )

[sub_resource type="ConvexPolygonShape2D" id=21]
points = PoolVector2Array( 0, 0, 21, 0, 21, 11.3187, 0, 11.3187 )

[sub_resource type="ConvexPolygonShape2D" id=22]
points = PoolVector2Array( 0, 0, 21, 0, 21, 11.056, 0, 10.8622 )

[sub_resource type="ConvexPolygonShape2D" id=23]
points = PoolVector2Array( 0, 0, 21, 0, 21, 11.2498, 0, 11.056 )

[sub_resource type="TileSet" id=24]
0/name = "tilemap_packed.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 168, 0, 42, 42 )
0/tile_mode = 1
0/autotile/bitmask_mode = 2
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 29818896, Vector2( 0, 1 ), 29818936, Vector2( 1, 0 ), 29818928, Vector2( 1, 1 ), 29818904 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 21, 21 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 20 )
0/shape_one_way = true
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 20 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 21 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 22 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 23 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 273, 168 )

[sub_resource type="DynamicFont" id=26]
size = 17
font_data = ExtResource( 4 )

[node name="Boss" type="Node2D"]
script = ExtResource( 1 )

[node name="Doors" type="TileMap" parent="." groups=[
"solid",
]]
z_index = 1
tile_set = SubResource( 4 )
cell_size = Vector2( 21, 21 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 917504, 0, 0, 983040, 0, 65536, 1048576, 0, 65536 )

[node name="SolidPlatform" type="TileMap" parent="." groups=[
"solid",
]]
z_index = 1
tile_set = SubResource( 19 )
cell_size = Vector2( 21, 21 )
collision_layer = 4
collision_mask = 11
format = 1
tile_data = PoolIntArray( 0, 0, 65537, 1, 0, 65537, 2, 0, 65537, 3, 0, 65537, 4, 0, 65537, 5, 0, 65537, 6, 0, 65537, 7, 0, 65537, 8, 0, 65537, 9, 0, 65537, 10, 0, 65537, 11, 0, 65537, 12, 0, 65537, 13, 0, 65537, 14, 0, 65537, 15, 0, 65537, 16, 0, 65537, 17, 0, 65537, 18, 0, 65537, 19, 0, 65537, 20, 0, 65537, 21, 0, 65537, 22, 0, 65537, 23, 0, 65537, 24, 0, 65537, 25, 0, 65537, 26, 0, 65537, 27, 0, 65537, 28, 0, 65537, 29, 0, 65537, 65536, 0, 65537, 65565, 0, 65537, 131072, 0, 65537, 131101, 0, 65537, 196608, 0, 65537, 196637, 0, 65537, 262144, 0, 65537, 262173, 0, 65537, 327680, 0, 65537, 327709, 0, 65537, 393216, 0, 65537, 393245, 0, 65537, 458752, 0, 65537, 458781, 0, 65537, 524288, 0, 65537, 524317, 0, 65537, 589824, 0, 65537, 589853, 0, 65537, 655360, 0, 65537, 655389, 0, 65537, 720896, 0, 65537, 720925, 0, 65537, 786432, 0, 65537, 786461, 0, 65537, 851968, 0, 65537, 851997, 0, 65537, 917533, 0, 65537, 983069, 0, 65537, 1048605, 0, 65537, 1114112, 0, 2, 1114113, 0, 2, 1114114, 0, 2, 1114115, 0, 2, 1114116, 0, 2, 1114117, 0, 2, 1114118, 0, 2, 1114119, 0, 2, 1114120, 0, 2, 1114121, 0, 2, 1114122, 0, 2, 1114123, 0, 2, 1114124, 0, 2, 1114125, 0, 2, 1114126, 0, 2, 1114127, 0, 2, 1114128, 0, 2, 1114129, 0, 2, 1114130, 0, 2, 1114131, 0, 2, 1114132, 0, 2, 1114133, 0, 2, 1114134, 0, 2, 1114135, 0, 2, 1114136, 0, 2, 1114137, 0, 2, 1114138, 0, 2, 1114139, 0, 2, 1114140, 0, 2, 1114141, 0, 65537, 1179648, 0, 65537, 1179649, 0, 65537, 1179650, 0, 65537, 1179651, 0, 65537, 1179652, 0, 65537, 1179653, 0, 65537, 1179654, 0, 65537, 1179655, 0, 65537, 1179656, 0, 65537, 1179657, 0, 65537, 1179658, 0, 65537, 1179659, 0, 65537, 1179660, 0, 65537, 1179661, 0, 65537, 1179662, 0, 65537, 1179663, 0, 65537, 1179664, 0, 65537, 1179665, 0, 65537, 1179666, 0, 65537, 1179667, 0, 65537, 1179668, 0, 65537, 1179669, 0, 65537, 1179670, 0, 65537, 1179671, 0, 65537, 1179672, 0, 65537, 1179673, 0, 65537, 1179674, 0, 65537, 1179675, 0, 65537, 1179676, 0, 65537, 1179677, 0, 65537, 1245184, 0, 65537, 1245185, 0, 65537, 1245186, 0, 65537, 1245187, 0, 65537, 1245188, 0, 65537, 1245189, 0, 65537, 1245190, 0, 65537, 1245191, 0, 65537, 1245192, 0, 65537, 1245193, 0, 65537, 1245194, 0, 65537, 1245195, 0, 65537, 1245196, 0, 65537, 1245197, 0, 65537, 1245198, 0, 65537, 1245199, 0, 65537, 1245200, 0, 65537, 1245201, 0, 65537, 1245202, 0, 65537, 1245203, 0, 65537, 1245204, 0, 65537, 1245205, 0, 65537, 1245206, 0, 65537, 1245207, 0, 65537, 1245208, 0, 65537, 1245209, 0, 65537, 1245210, 0, 65537, 1245211, 0, 65537, 1245212, 0, 65537, 1245213, 0, 65537 )

[node name="SemiSolidPlatform" type="TileMap" parent="." groups=[
"semisolid",
]]
z_index = 1
tile_set = SubResource( 24 )
cell_size = Vector2( 21, 21 )
collision_layer = 4
collision_mask = 11
format = 1

[node name="PlayerDetectionArea" type="Area2D" parent="."]
position = Vector2( 0, -63 )
collision_layer = 0

[node name="Shape" type="CollisionShape2D" parent="PlayerDetectionArea"]
position = Vector2( 315, 252 )
shape = SubResource( 25 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 84.0
margin_top = 168.0
margin_right = 227.0
margin_bottom = 261.0
custom_fonts/font = SubResource( 26 )
text = "---HELL ROOM---
If you survive this 
I'll put your name
in the credits"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blocker" parent="." groups=[
"crushing",
] instance=ExtResource( 3 )]
position = Vector2( 315, 189 )
[connection signal="body_entered" from="PlayerDetectionArea" to="." method="_on_PlayerDetectionArea_body_entered"]
